--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,17 +1,8 @@
-name: OrangeHRM & Allure Report
+name: OrangeHRM
 
 on:
   push:
     branches: [ "main", "master" ]
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
-      - 'LICENSE'
-  pull_request:
-    branches: [ "main", "master" ]
-    paths-ignore:
-      - '**.md'
-      - 'docs/**'
   workflow_dispatch:
 
 concurrency:
@@ -19,20 +10,24 @@ concurrency:
   cancel-in-progress: true
 
 permissions:
-  contents: read
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   test:
+    name: Run ${{ matrix.test-step }}
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        test-step: ["Step1_Core_Admin", "Step2_PIM_Foundation", "Step3_Operational_Flow", "Step4_Talent_And_Reports", "Step5_Maintenance_Safety"]
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Set up JDK 21 and Maven Memory
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
@@ -41,66 +36,63 @@ jobs:
         env:
           MAVEN_OPTS: '-Xmx2g -XX:+TieredCompilation'
 
-      - name: Resolve Dependencies
-        run: mvn dependency:resolve
-
-      - name: Build and Compile
-        run: mvn clean compile -B
-
-      - name: Download Allure History
-        uses: actions/checkout@v4
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      - name: Run Tests (Ignore Failure)
-        id: run_tests
+      - name: Run Tests with 4 Threads
         run: |
           mvn test -B \
             -Dsurefire.suiteXmlFiles=testng.xml \
+            -Dtestnames=${{ matrix.test-step }} \
             -Dheadless=true \
-            -Dsurefire.rerunFailingTests=1 \
-            -Dmaven.test.failure.ignore=true
+            -Dparallel=classes \
+            -DthreadCount=4 \
+            -Dmaven.test.failure.ignore=true 
 
-      - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        with:
-
-          allure_results: target/allure-results
-          allure_history: gh-pages
-          keep_reports: 30
-
-      - name: Upload Report Artifacts
+      - name: Upload Results per Step
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: allure-data
-          path: allure-report
-          retention-days: 10
+          name: allure-results-${{ matrix.test-step }}
+          path: target/allure-results
+          retention-days: 1
 
-  deploy:
+  report:
+    name: Aggregate and Deploy Report
     needs: test
     if: always()
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-      contents: write
-
     steps:
-      - name: Download Allure Report Artifact
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Download All Step Results
         uses: actions/download-artifact@v4
         with:
-          name: allure-data
-          path: deploy-report
+          path: all-results
+          pattern: allure-results-*
+          merge-multiple: true
+
+      - name: Download Allure History from GitHub Pages
+        uses: actions/checkout@v4
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages-history
+
+      - name: Merge Results and History
+        run: |
+          mkdir -p target/allure-results
+          cp -r all-results/* target/allure-results/
+          [ -d gh-pages-history/history ] && cp -r gh-pages-history/history target/allure-results/ || echo "No history found"
+
+      - name: Generate Final Allure Report
+        uses: simple-elf/allure-report-action@master
+        with:
+          allure_results: target/allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: deploy-report
-          force_orphan: true
+          publish_dir: allure-report
