--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,13 +18,18 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+  permissions:
+    contents: write
+    pages: write
+    id-token: write
+
 env:
   BROWSER: ${{ github.event.inputs.browser || 'chrome' }}
   MAVEN_OPTS: -Xmx2048m
 
 jobs:
   foundation:
-    name: Foundation (Steps 1-3)
+    name: Foundation (Admin + PIM + Recruitment)
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
