--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,6 +43,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Setup Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+
       - name: Run Foundation Tests
         run: |
           mvn test -B \
@@ -50,6 +57,8 @@ jobs:
             -Dtestnames=Step1_Hyper_Admin_PIM_Foundation,Step2_PIM_User_Foundation,Step3_Recruitment \
             -Dbrowser=chrome \
             -Dheadless=true
+        env:
+          DISPLAY: :99
 
       - name: Upload Foundation Results
         if: always()
@@ -88,6 +97,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Setup Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+
       - name: Run ${{ matrix.name }}
         run: |
           mvn test -B \
@@ -95,6 +111,8 @@ jobs:
             -Dtestnames="${{ matrix.testname }}" \
             -Dbrowser=chrome \
             -Dheadless=true
+        env:
+          DISPLAY: :99
 
       - name: Upload Ops Results
         if: always()
@@ -133,6 +151,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Setup Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+
       - name: Run ${{ matrix.name }}
         run: |
           mvn test -B \
@@ -140,6 +165,8 @@ jobs:
             -Dtestnames="${{ matrix.testname }}" \
             -Dbrowser=chrome \
             -Dheadless=true
+        env:
+          DISPLAY: :99
 
       - name: Upload Perf Results
         if: always()
@@ -172,6 +199,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Setup Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+
       - name: Run ${{ matrix.name }}
         run: |
           mvn test -B \
@@ -179,6 +213,8 @@ jobs:
             -Dtestnames="${{ matrix.testname }}" \
             -Dbrowser=chrome \
             -Dheadless=true
+        env:
+          DISPLAY: :99
 
       - name: Upload Maint Results
         if: always()
@@ -214,6 +250,13 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Setup Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
+          export DISPLAY=:99
+
       - name: Run ${{ matrix.name }}
         run: |
           mvn test -B \
@@ -221,6 +264,8 @@ jobs:
             -Dtestnames="${{ matrix.testname }}" \
             -Dbrowser=chrome \
             -Dheadless=true
+        env:
+          DISPLAY: :99
 
       - name: Upload Cleanup Results
         if: always()
@@ -277,3 +322,18 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-report
+
+      - name: Job Summary
+        if: always()
+        run: |
+          echo "## Test Execution Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Step | Status |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Foundation | ${{ needs.foundation.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Operations | ${{ needs.operations.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Performance | ${{ needs.performance.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Maintenance | ${{ needs.maintenance.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Cleanup | ${{ needs.cleanup.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Allure Report:** [View Report](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/)" >> $GITHUB_STEP_SUMMARY
