--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,6 +58,7 @@ jobs:
             -Dtest="LoginTest,PIM*,Admin*,Recruitment*,!*Cleaning" \
             -Dbrowser=${{ env.BROWSER }} \
             -Dheadless=true
+           -Dmaven.test.failure.ignore=true
         env:
           DISPLAY: :99
 
@@ -121,6 +122,7 @@ jobs:
             -Dtest="${{ matrix.test_patterns }}" \
             -Dbrowser=${{ env.BROWSER }} \
             -Dheadless=true
+            -Dmaven.test.failure.ignore=true
         env:
           DISPLAY: :99
 
@@ -184,6 +186,7 @@ jobs:
             -Dtest="${{ matrix.test_patterns }}" \
             -Dbrowser=${{ env.BROWSER }} \
             -Dheadless=true
+            -Dmaven.test.failure.ignore=true
         env:
           DISPLAY: :99
 
@@ -241,6 +244,7 @@ jobs:
             -Dtest="${{ matrix.test_patterns }}" \
             -Dbrowser=${{ env.BROWSER }} \
             -Dheadless=true
+            -Dmaven.test.failure.ignore=true
         env:
           DISPLAY: :99
 
@@ -260,7 +264,6 @@ jobs:
 
   cleanup:
     name: Clean - ${{ matrix.name }}
-    # تصحيح جوهري: يجب أن تنتظر مرحلة الصيانة أيضاً
     needs: [operations, performance, maintenance]
     if: success() || failure()
     runs-on: ubuntu-latest
@@ -301,6 +304,7 @@ jobs:
             -Dtest="${{ matrix.test_patterns }}" \
             -Dbrowser=${{ env.BROWSER }} \
             -Dheadless=true
+            -Dmaven.test.failure.ignore=true
         env:
           DISPLAY: :99
 
