--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,7 +39,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y xvfb
           Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
           echo "XVFB_PID=$!" >> $GITHUB_ENV
-          export DISPLAY=:99
+          echo "DISPLAY=:99" >> $GITHUB_ENV
 
       - name: Run Foundation
         run: |
@@ -66,7 +66,7 @@ jobs:
     needs: foundation
     if: success()
     runs-on: ubuntu-latest
-    timeout-minutes: 15 # كل shard سيأخذ دقائق معدودة فقط
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
@@ -107,7 +107,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y xvfb
           Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
           echo "XVFB_PID=$!" >> $GITHUB_ENV
-          export DISPLAY=:99
+          echo "DISPLAY=:99" >> $GITHUB_ENV
 
       - name: Run ${{ matrix.shard_name }}
         run: |
@@ -159,7 +159,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y xvfb
           Xvfb :99 -screen 0 1920x1080x24 > /dev/null 2>&1 &
           echo "XVFB_PID=$!" >> $GITHUB_ENV
-          export DISPLAY=:99
+          echo "DISPLAY=:99" >> $GITHUB_ENV
 
       - name: Run Cleanup
         run: |
