--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,12 +28,15 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 45
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
+
       - name: Setup Xvfb
         run: |
           sudo apt-get update && sudo apt-get install -y xvfb
@@ -51,12 +54,13 @@ jobs:
             -Dheadless=true \
             -Dmaven.test.failure.ignore=false
 
-      - uses: actions/upload-artifact@v4
-        if: always()
+      - name: Upload Foundation Results
+        if: success() || failure()
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results-foundation
           path: target/allure-results
-          retention-days: 1
+          retention-days: 3
 
   # ====================================================
   # 2. Regression Matrix (46 Parallel Shards) ⚡
@@ -64,9 +68,9 @@ jobs:
   regression_matrix:
     name: 2. ${{ matrix.shard_name }}
     needs: foundation
-    if: success()
+    if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -96,8 +100,11 @@ jobs:
           "Reg_Maint_Auth", "Reg_Maint_Access", "Reg_Maint_Purge", "Reg_Maint_Safety"
         ]
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -119,18 +126,19 @@ jobs:
             -Dheadless=true \
             -Dmaven.test.failure.ignore=true
 
-      - uses: actions/upload-artifact@v4
-        if: always()
+      - name: Upload regression Results
+        if: success() || failure()
+        uses: actions/upload-artifact@v4
         with:
-          name: allure-results-${{ matrix.shard_name }}
+          name: allure-results-regression-${{ matrix.shard_name }}
           path: target/allure-results
-          retention-days: 1
+          retention-days: 3
 
   # ====================================================
   # 3. Cleanup Matrix (8 Parallel Shards) 🧹
   # ====================================================
   cleanup_matrix:
-    name: 3. ${{ matrix.clean_shard }}
+    name: Clean - ${{ matrix.clean_shard }}
     needs: [regression_matrix]
     if: always()
     runs-on: ubuntu-latest
@@ -148,8 +156,10 @@ jobs:
           "Clean_Buzz"
         ]
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -170,12 +180,13 @@ jobs:
             -Dheadless=true \
             -Dmaven.test.failure.ignore=true
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload Cleanup Results
         if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: allure-results-${{ matrix.clean_shard }}
+          name: allure-results-clean-${{ matrix.clean_shard }}
           path: target/allure-results
-          retention-days: 1
+          retention-days: 3
 
   # ====================================================
   # 4. Final Report
@@ -185,26 +196,61 @@ jobs:
     needs: [foundation, regression_matrix, cleanup_matrix]
     if: always()
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      - name: Download All Results
+        uses: actions/download-artifact@v4
         with:
-          pattern: allure-results-*
           path: all-results
+          pattern: allure-results-*
           merge-multiple: true
+
+      - name: Download Allure History
+        uses: actions/checkout@v4
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Prepare Results for Generation
+        timeout-minutes: 5
+        run: |
+          mkdir -p target/allure-results
+          cp -r all-results/* target/allure-results/
+          if [ -d "gh-pages/history" ]; then
+            cp -r gh-pages/history target/allure-results/
+          fi
+          rm -f target/allure-results/executor.json
 
       - name: Generate Allure Report
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          allure_results: all-results
+          allure_results: target/allure-results
           allure_history: gh-pages
           keep_reports: 30
 
-      - name: Deploy Report
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-report
+
+      - name: Job Summary
+        if: success() || failure()
+        run: |
+          echo "## Test Execution Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Step | Status |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Foundation | ${{ needs.foundation.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Operations | ${{ needs.operations.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Performance | ${{ needs.performance.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Maintenance | ${{ needs.maintenance.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Cleanup | ${{ needs.cleanup.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+           echo "**Allure Report:** [View Report](https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/)" >> $GITHUB_STEP_SUMMARY    
